<resources>
    <string name="app_name">My Phone</string>
    <string name="name">Name</string>
    <string name="vendor">Vendor</string>
    <string name="button">Button</string>
    <string name="type">Type</string>
    <string name="sensor">Sensor</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="memory">Memory</string>
    <string name="gps">GPS</string>
    <string name="svid">SVID</string>
    <string name="gps_open">GPS is open</string>
    <string name="gps_close">GPS is close</string>
    <string name="gps_no_signal">GPS signal is not received</string>
    <string name="unknow">Unknow</string>
    <string name="gps_beidou">Beidou</string>
    <string name="gps_sbas">SBAS</string>
    <string name="gps_qzss">QZSS</string>
    <string name="gps_glonass">Glonass</string>
    <string name="gps_galileo">Galileo</string>
    <string name="gps_azimuth">Azimuth</string>
    <string name="gps_carrier_frequency">Carrier Frequency</string>
    <string name="gps_cn">Carrier/Noise</string>
    <string name="gps_elevation">Elevation</string>
    <string name="camera">Camera</string>
    <string name="id">Id</string>
    <string name="parameter">Parameter</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="facing">Facing</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="external">External</string>
    <string name="AE">AE COMPENSATION</string>
    <string name="AP">APERTURES</string>
    <string name="FC">FOCAL LENGTH</string>
    <string name="ET">EXPOSURE TIME</string>
    <string name="ISO">ISO</string>
</resources>
